fix spacing

--- a/styles.css
+++ b/styles.css
@@ -95,5 +95,5 @@ header .subtitle {
 }
 
 #about {
-  margin-bottom: 15px;
+  margin-bottom: 25px;
 }
